@@ -1,3 +1,10 @@
+2005-11-08  Jonathan Pryor <jonpryor@vt.edu>
+
+	* Stdlib.cs: Implement IEquatable<FilePosition> for FilePosition.
+	* Syscall.cs: Provide GetHashCode(), Equals(), operator==, operator!= for
+	  all structure types.  Implement IEquatable<T> for all "value type" 
+	  structs and classes.
+
 2005-11-07  Jonathan Pryor <jonpryor@vt.edu>
 
 	* Syscall.cs: *xattr functions should use the FileNameMarshaler for filenames.
